[package]
name = "brun"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.198", features = ["derive"] }
shellish_parse = "2.2.0"
