[package]
name = "brun"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.59"
